yml/belajar/nginx-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-node-selector
spec:
  nodeSelector:
    env: staging
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
