yml/belajar/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-example ## DNS Services http://service-example.default.svc.cluster.local:80
  labels:
    name: service-example
spec:
  type: ExternalName
  externalName: example.com ## nembak ke https://example.com
  ports:
    - port: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-curl
  labels:
    name: nginx-curl
spec:
  containers:
    - name: nginx-curl
      image: aureezzhenx/nginx-curl
