yml/belajar/service-nginx-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx ## Selector label dari Pod NGINX line 16
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
